# memorymesh

./: .gitignore  404.html  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GEMINI.md  LICENSE  Makefile  README.md  ROADMAP.md  SECURITY.md  glama.json  index.html  mkdocs.yml  pyproject.toml  robots.txt  server.json  sitemap.xml  smithery.yaml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  docs.yml  publish.yml
api/: index.html
architecture/: index.html
archive/: STRATEGY.md
benchmarks/: README.md  __main__.py  bench_memorymesh.py  index.html  results.json
cli/: index.html
configuration/: index.html
contributing/: index.html
docs/: api.md  architecture.md  benchmarks.md  cli.md  configuration.md  contributing.md  faq.md  getting-started.md  index.md  mcp-server.md  multi-tool-sync.md  roadmap.md
docs/.well-known/mcp/: server-card.json
docs/stylesheets/: extra.css
examples/: demo_chat.py  quickstart.py  with_any_llm.py  with_ollama.py  with_openai.py
faq/: index.html
feedback/: claude-code-agent-feedback-2026-02-20.md
getting-started/: index.html
mcp-server/: index.html
multi-tool-sync/: index.html
overrides/: main.html
roadmap/: index.html
search/: search_index.json
smithery/: Dockerfile  middleware.py  pyproject.toml  server.py
src/memorymesh/: __init__.py  auto_importance.py  categories.py  cli.py  compaction.py  contradiction.py  core.py  dashboard.py  dashboard_html.py  embeddings.py  encryption.py  html_export.py  init_cmd.py  mcp_server.py  memory.py  migrations.py  privacy.py  relevance.py  report.py  review.py  store.py  sync.py
src/memorymesh/formats/: __init__.py  _shared.py  claude.py  codex.py  gemini.py
strategy/: index.html
tests/: test_auto_compact.py  test_auto_importance.py  test_categories.py  test_cli.py  test_compaction.py  test_contradiction.py  test_core.py  test_dashboard.py  test_dual_store.py  test_embeddings.py  test_encryption.py  test_episodic.py  test_feedback_fixes.py  test_html_export.py  test_infer_scope.py  test_init_cmd.py  test_mcp_server.py  test_memory.py  test_migrations.py  test_pin_provenance.py  test_privacy.py  test_relevance.py  test_report.py  test_retrieval_filters.py  test_review.py  test_session_start.py  test_store.py  test_sync.py  test_update.py  test_v4_features.py
tests/eval/: conftest.py  test_adversarial.py  test_recall_quality.py
tests/test_formats/: test_claude_adapter.py  test_codex_adapter.py  test_gemini_adapter.py  test_registry.py  test_shared.py
