[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "memorymesh"
version = "4.0.1"
description = "The SQLite of AI Memory - an embeddable, zero-dependency AI memory library for any LLM application"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "SparkVibe", email = "hello@sparkvibe.io" },
]
keywords = [
    "ai",
    "memory",
    "llm",
    "sqlite",
    "embeddings",
    "semantic-memory",
    "agent",
    "rag",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]

[project.optional-dependencies]
local = [
    "sentence-transformers>=2.0",
    "torch",
]
ollama = []  # Ollama provider uses stdlib urllib -- no extra deps needed
openai = [
    "openai>=1.0",
]
all = [
    "sentence-transformers>=2.0",
    "torch",
    "openai>=1.0",
]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "ruff",
    "mypy",
]
docs = [
    "mkdocs>=1.6,<2",
    "mkdocs-material>=9.0",
]

[project.urls]
Homepage = "https://github.com/sparkvibe-io/memorymesh"
Repository = "https://github.com/sparkvibe-io/memorymesh"
Issues = "https://github.com/sparkvibe-io/memorymesh/issues"
Documentation = "https://sparkvibe-io.github.io/memorymesh/"

[project.scripts]
memorymesh = "memorymesh.cli:main"
memorymesh-mcp = "memorymesh.mcp_server:main"

# ---------------------------------------------------------------------------
# Ruff
# ---------------------------------------------------------------------------
[tool.ruff]
target-version = "py39"
line-length = 100

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "TCH",  # flake8-type-checking
    "RUF",  # ruff-specific rules
]
ignore = [
    "E501",   # line length is handled by formatter
    "TC001",  # don't require TYPE_CHECKING blocks for first-party imports
    "TC003",  # don't require TYPE_CHECKING blocks for stdlib imports
    "RUF022", # allow logical grouping in __all__
]

[tool.ruff.lint.isort]
known-first-party = ["memorymesh"]

# ---------------------------------------------------------------------------
# Mypy
# ---------------------------------------------------------------------------
[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true

[[tool.mypy.overrides]]
module = [
    "sentence_transformers.*",
    "torch.*",
]
ignore_missing_imports = true

# ---------------------------------------------------------------------------
# Pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
